--- a/templates/czekaj.html
+++ b/templates/czekaj.html
@@ -8,5 +8,7 @@
 
 
 <a>lol</a>
-<a> {{ session['player'] }}</a>
+gracz:<a> {{ session['player'] }}</a>
+czekanko:<a>{{ session['waiting'] }}</a>
+
 {% endblock %}
