--- a/templates/poczekalnia.html
+++ b/templates/poczekalnia.html
@@ -4,15 +4,16 @@
     {% if gra['full'] == False %}
        <meta http-equiv="refresh" content="2" >
     {% endif %}
-    <title>Super Farmer</title>
 {% endblock %}
 
 {% block body %}
     <div id="wygrana">
      {% if gra['full'] == False %}
         <h2>Oczekiwanie na przeciwnika</h2>
+         <h3>{{ gra['full'] }}lol</h3>
     {% else %}
         <h2>Znaleziono przeciwnika</h2>
+        <h3>{{ gra }}lol</h3>
          <a class="links" href="{{ url_for('sm', gameNumber=gra['number']) }}">Start gry</a>
 
     {% endif %}
