--- a/templates/siec.html
+++ b/templates/siec.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Super Farmer</title>
+    <title>Poczekalnia</title>
 {% endblock %}
 
-{% block content %}
+{% block body %}
     <div id="menu">
     <h1>Super Farmer</h1>
     <a class="links" href="/create">Stwórz grę</a>
