--- a/templates/start.html
+++ b/templates/start.html
@@ -4,11 +4,20 @@
 {% block body%}
 
 
- <a class="wut"> LOOOOL </a>
+
 <p>Gra Connect Four</p>
-<a href="{{ url_for('test')}}">
-    {{ title }}siema
-</a>
+
+<a href="/vs"> 1 VS 1 </a>
+<br>
+<br>
+<a href="/AI">  VS AI </a>
+<br>
+<br>
+<a href="/siec"> Multiplayer </a>
+
+
+
+
 
 
 
