--- a/templates/siec.html
+++ b/templates/siec.html
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div id="menu">
-    <h1>Super Farmer</h1>
+    <h1>stworz pokoj lub dołącz do gry</h1>
     <a class="links" href="/create">Stwórz grę</a>
     <br><br>
         <h2>Lista gier</h2>
